Spring and Oracle

--- a/Spring_02/pom.xml
+++ b/Spring_02/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.example</groupId>
-	<artifactId>spring</artifactId>
-	<name>spring</name>
+	<artifactId>Controller</artifactId>
+	<name>Spring_02</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
